style(index.html, output.css): improve website layout and responsiveness by adding smooth scrolling, adjusting logo size, and fixing menu button alignment. Also, add underline effect to menu links on hover.

--- a/docs/output.css
+++ b/docs/output.css
@@ -318,11 +318,6 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   color: #9ca3af; /* 2 */
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  opacity: 1; /* 1 */
-  color: #9ca3af; /* 2 */
-}
-
 input::placeholder,
 textarea::placeholder {
   opacity: 1; /* 1 */
@@ -625,17 +620,14 @@ video {
 .h-10 {
   height: 2.5rem;
 }
-.h-3 {
-  height: 0.75rem;
+.h-5 {
+  height: 1.25rem;
 }
 .h-0 {
   height: 0px;
 }
 .h-\[calc\(100\%-1rem\)\] {
   height: calc(100% - 1rem);
-}
-.h-5 {
-  height: 1.25rem;
 }
 .h-8 {
   height: 2rem;
@@ -660,9 +652,6 @@ video {
 }
 .w-auto {
   width: auto;
-}
-.w-3 {
-  width: 0.75rem;
 }
 .w-5 {
   width: 1.25rem;
@@ -723,14 +712,8 @@ video {
 .items-start {
   align-items: flex-start;
 }
-.items-end {
-  align-items: flex-end;
-}
 .items-center {
   align-items: center;
-}
-.justify-end {
-  justify-content: flex-end;
 }
 .justify-center {
   justify-content: center;
@@ -1049,6 +1032,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(156 81 210 / var(--tw-text-opacity));
 }
+.hover\:underline:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
 .hover\:shadow-xl:hover {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -1102,6 +1089,10 @@ video {
 }
 @media (min-width: 768px) {
 
+  .md\:mt-20 {
+    margin-top: 5rem;
+  }
+
   .md\:mr-0 {
     margin-right: 0px;
   }
@@ -1112,6 +1103,10 @@ video {
 
   .md\:flex {
     display: flex;
+  }
+
+  .md\:h-12 {
+    height: 3rem;
   }
 
   .md\:grid-cols-3 {
